--- a/blueprint/src/content.tex
+++ b/blueprint/src/content.tex
@@ -6,5 +6,28 @@
 % the current file can be a simple sequence of \input. Otherwise It
 % can start with a \section or \chapter for instance.
 
-\section{Test}
-Tralala
+\section{Polynomial maps between affine spaces}
+\begin{definition}
+    Polynomial map for given affine space basis.
+\end{definition}
+\begin{theorem}
+    Polynomial map definition is independent on chosen affine space basis.
+\end{theorem}
+\begin{definition}
+    Polynomial map (for any basis)
+\end{definition}
+
+\begin{theorem}
+    Affine maps are polynomial of degree 1.
+\end{theorem}
+
+\section{Blossoming principle}
+\begin{definition}
+    Multiaffine map
+\end{definition}
+\begin{definition}
+    Symmetric map
+\end{definition}
+\begin{theorem}
+    Blossoming principle
+\end{theorem}
