--- a/blueprint/src/content.tex
+++ b/blueprint/src/content.tex
@@ -8,10 +8,19 @@
 
 \section{Polynomial maps between affine spaces}
 \begin{definition}
-    Polynomial map for given affine space basis.
+	\label{def:CoordinateSystem}
+	\lean{CoordinateSystem}
+	\leanok	
+	A coordinate system on a given affine space $(P,V,+)$ consists of an origin point in $P$ and a vector space basis for $V$.
 \end{definition}
+
+\begin{definition}
+	\label{def:PolynomialMapInCoords}
+	A polynomial map between two affine spaces with chosen coordinate systems ...
+\end{definition}
+
 \begin{theorem}
-    Polynomial map definition is independent on chosen affine space basis.
+    Polynomial map definition is independent of chosen affine space basis.
 \end{theorem}
 \begin{definition}
     Polynomial map (for any basis)
